# demonstrators

./: README.md
demonstrator_core/: .env.example  .env.prod.example  .gitignore  Dockerfile  crontab  docker-compose-local.yml  docker-compose.yml  entrypoint_consumer.sh  entrypoint_web_app.sh  requirements.txt
demonstrator_core/common_models/: README.md  setup.py
demonstrator_core/common_models/common.egg-info/: PKG-INFO  SOURCES.txt
demonstrator_core/common_models/common_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demonstrator_core/consumer/: settings.py
demonstrator_core/mqtt_service/: Dockerfile  app.py  entrypoint_mqtt.sh  requirements.txt
eddie-entsoe-integration/: Cargo.toml  Dockerfile  Dockerfile_full  Dockerfile_slim  README-deployment.md  README.md  config.json
eddie-entsoe-integration/examples/: emission.rs  energy-mix.rs  example_utils.rs  prediction.rs
eddie-entsoe-integration/src/: config.rs  main.rs
eddie-entsoe-integration/src/aggregation/: logic.rs  mod.rs  schema.rs
eddie-entsoe-integration/src/entsoe/: client.rs  mod.rs  schema.rs
eddie-entsoe-integration/src/server/: api.rs  gui.rs  mod.rs
eddie-entsoe-integration/www/static/: gui.html  index.html
eddie-entsoe-integration/xml/: generation_by_type.xml  prediction.xml  prediction_schema.rs
prediction-service/: Dockerfile  app.py  requirements.txt
prediction-service/Test_Data/: awattar.json  consumption.json  kafka_messages - Kopie.json  kafka_messages.json  randomized_consumption.json  randomized_quart_hour_consumption.json
(+90 files in other folders)
